--- a/package.json
+++ b/package.json
@@ -2,20 +2,27 @@
   "name": "with-typescript",
   "version": "1.0.0",
   "scripts": {
-    "dev": "next",
+    "dev": "node ./database-test.js && next dev",
     "build": "next build",
     "start": "next start",
     "type-check": "tsc"
   },
   "dependencies": {
-    "next": "latest",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "axios": "^0.19.2",
+    "next": "9.3.6",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "sqlite": "^4.0.11",
+    "sqlite3": "^5.0.0",
+    "swr": "^0.2.3"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/sqlite3": "^3.1.6",
     "typescript": "3.7.3"
   },
   "license": "ISC"
